--- a/Example/Droar/Base.lproj/LaunchScreen.xib
+++ b/Example/Droar/Base.lproj/LaunchScreen.xib
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6214" systemVersion="14A314h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6207"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,31 +15,44 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 CocoaPods. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Droar" translatesAutoresizingMaskIntoConstraints="NO" id="cLo-70-fSx">
+                    <rect key="frame" x="20" y="20" width="440" height="338"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Powered by:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yX3-Vw-gyx">
+                    <rect key="frame" x="187" y="378" width="107" height="24"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" red="0.011764705882352941" green="0.33333333333333331" blue="0.51764705882352935" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Droar" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="140" width="441" height="43"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MyriadLogo" translatesAutoresizingMaskIntoConstraints="NO" id="eKQ-eb-P4R">
+                    <rect key="frame" x="20" y="410" width="440" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="BRW-MU-KpS"/>
+                    </constraints>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="cLo-70-fSx" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="2yq-fg-jRv"/>
+                <constraint firstItem="eKQ-eb-P4R" firstAttribute="top" secondItem="yX3-Vw-gyx" secondAttribute="bottom" constant="8" id="3mr-2g-RJL"/>
+                <constraint firstItem="eKQ-eb-P4R" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="6xg-zq-23K"/>
+                <constraint firstItem="cLo-70-fSx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="KpK-BW-vbo"/>
+                <constraint firstAttribute="bottom" secondItem="eKQ-eb-P4R" secondAttribute="bottom" constant="20" id="Pbf-0C-SFJ"/>
+                <constraint firstAttribute="trailing" secondItem="eKQ-eb-P4R" secondAttribute="trailing" constant="20" id="YVf-MX-kgt"/>
+                <constraint firstAttribute="trailing" secondItem="cLo-70-fSx" secondAttribute="trailing" constant="20" id="akn-I4-coC"/>
+                <constraint firstAttribute="trailing" secondItem="eKQ-eb-P4R" secondAttribute="trailing" constant="20" id="dAH-jh-4iX"/>
+                <constraint firstItem="yX3-Vw-gyx" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="dZJ-kD-OhH"/>
+                <constraint firstItem="yX3-Vw-gyx" firstAttribute="top" secondItem="cLo-70-fSx" secondAttribute="bottom" constant="20" id="fGL-Gh-UJb"/>
+                <constraint firstItem="eKQ-eb-P4R" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="rsD-W7-jf3"/>
+                <constraint firstAttribute="bottom" secondItem="eKQ-eb-P4R" secondAttribute="bottom" constant="20" id="sb3-nm-Z1Q"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="Droar" width="1024" height="1192"/>
+        <image name="MyriadLogo" width="2096" height="744"/>
+    </resources>
 </document>
