--- a/Droar/Classes/Cells/DroarImageCell.xib
+++ b/Droar/Classes/Cells/DroarImageCell.xib
@@ -17,38 +17,43 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DroarImageCell" rowHeight="138" id="uu4-3v-Eik" customClass="DroarImageCell" customModule="Droar" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="138"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DroarImageCell" id="uu4-3v-Eik" customClass="DroarImageCell" customModule="Droar" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="116"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uu4-3v-Eik" id="CeS-jq-CIT">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="137.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="115.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEl-wb-Zo2">
-                        <rect key="frame" x="8" y="8" width="58.5" height="121.5"/>
-                        <fontDescription key="fontDescription" name="RussoOne-Regular" family="Russo One" pointSize="12"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eNA-5s-Juo">
-                        <rect key="frame" x="74" y="8" width="292.5" height="122"/>
-                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dDK-Eb-0FC">
+                        <rect key="frame" x="8" y="8" width="359" height="100.5"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEl-wb-Zo2">
+                                <rect key="frame" x="0.0" y="43" width="58.5" height="14.5"/>
+                                <fontDescription key="fontDescription" name="RussoOne-Regular" family="Russo One" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="eNA-5s-Juo">
+                                <rect key="frame" x="66.5" y="0.0" width="292.5" height="100.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="IHf-fh-nnm"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="BEl-wb-Zo2" firstAttribute="top" secondItem="CeS-jq-CIT" secondAttribute="topMargin" id="13z-gD-YMM"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="eNA-5s-Juo" secondAttribute="bottom" id="5PM-BV-c5d"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="BEl-wb-Zo2" secondAttribute="bottom" id="6oy-dw-eA7"/>
-                    <constraint firstItem="eNA-5s-Juo" firstAttribute="trailing" secondItem="CeS-jq-CIT" secondAttribute="trailingMargin" id="7UC-Cb-hhw"/>
-                    <constraint firstItem="eNA-5s-Juo" firstAttribute="leading" secondItem="BEl-wb-Zo2" secondAttribute="trailing" constant="8" id="AaC-Z0-OOK"/>
-                    <constraint firstItem="BEl-wb-Zo2" firstAttribute="leading" secondItem="CeS-jq-CIT" secondAttribute="leadingMargin" id="UNn-u3-Xvh"/>
-                    <constraint firstItem="eNA-5s-Juo" firstAttribute="top" secondItem="CeS-jq-CIT" secondAttribute="topMargin" id="rUU-LD-ZkV"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="dDK-Eb-0FC" secondAttribute="trailing" id="Etd-Ko-oXk"/>
+                    <constraint firstItem="dDK-Eb-0FC" firstAttribute="leading" secondItem="CeS-jq-CIT" secondAttribute="leadingMargin" id="VyN-DV-Mkf"/>
+                    <constraint firstItem="dDK-Eb-0FC" firstAttribute="top" secondItem="CeS-jq-CIT" secondAttribute="topMargin" id="h9N-mg-5dV"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="dDK-Eb-0FC" secondAttribute="bottom" id="jpy-RC-CvR"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="largeImageView" destination="eNA-5s-Juo" id="vyw-vX-EgJ"/>
                 <outlet property="titleLabel" destination="BEl-wb-Zo2" id="HEm-Vg-aos"/>
             </connections>
-            <point key="canvasLocation" x="24.5" y="46"/>
+            <point key="canvasLocation" x="24.5" y="62"/>
         </tableViewCell>
     </objects>
 </document>
