--- a/Example/Droar/Base.lproj/Main.storyboard
+++ b/Example/Droar/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="RussoOne-Regular.ttf">
+            <string>RussoOne-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
@@ -23,15 +28,23 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Droar" translatesAutoresizingMaskIntoConstraints="NO" id="vIY-zf-O7Y">
-                                <rect key="frame" x="36" y="40" width="303" height="607"/>
+                                <rect key="frame" x="36" y="63.5" width="303" height="540"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Triple-tap to begin!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJo-5W-p1a">
+                                <rect key="frame" x="103.5" y="623" width="168.5" height="23.5"/>
+                                <fontDescription key="fontDescription" name="RussoOne-Regular" family="Russo One" pointSize="20"/>
+                                <color key="textColor" red="0.1764705882352941" green="0.34509803921568627" blue="0.48627450980392156" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="vIY-zf-O7Y" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="0hF-3Y-nxc"/>
+                            <constraint firstItem="kJo-5W-p1a" firstAttribute="top" secondItem="vIY-zf-O7Y" secondAttribute="bottom" constant="20" id="77f-7F-B61"/>
                             <constraint firstItem="vIY-zf-O7Y" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="20" id="Qgq-UM-Vcm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="vIY-zf-O7Y" secondAttribute="trailing" constant="20" id="XVY-yv-eZ7"/>
-                            <constraint firstItem="vIY-zf-O7Y" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="20" id="v7A-pJ-8BT"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="vIY-zf-O7Y" secondAttribute="bottom" constant="20" id="xrG-Lv-uip"/>
+                            <constraint firstItem="kJo-5W-p1a" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="iHu-kN-res"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="kJo-5W-p1a" secondAttribute="bottom" constant="20" id="oxW-8a-JBg"/>
                         </constraints>
                     </view>
                 </viewController>
