--- a/Example/Droar/Base.lproj/Main.storyboard
+++ b/Example/Droar/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Droar" translatesAutoresizingMaskIntoConstraints="NO" id="vIY-zf-O7Y">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DroarIcon_Text" translatesAutoresizingMaskIntoConstraints="NO" id="vIY-zf-O7Y">
                                 <rect key="frame" x="36" y="63.5" width="303" height="540"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Triple-tap to begin!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJo-5W-p1a">
@@ -53,6 +53,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Droar" width="1024" height="1192"/>
+        <image name="DroarIcon_Text" width="1024" height="1192"/>
     </resources>
 </document>
