Added segment control to switch UI between light and dark mode

--- a/Example/Droar/Base.lproj/Main.storyboard
+++ b/Example/Droar/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -40,17 +40,26 @@
                                     <action selector="presentTest:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="arq-Ve-ncU"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tbi-Ir-tHi">
+                                <rect key="frame" x="112.5" y="118" width="150" height="30"/>
+                                <state key="normal" title="Light Only Mode View"/>
+                                <connections>
+                                    <action selector="showLightOnlyModeView:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="TzW-mi-nIy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="vIY-zf-O7Y" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="0hF-3Y-nxc"/>
                             <constraint firstItem="kJo-5W-p1a" firstAttribute="top" secondItem="vIY-zf-O7Y" secondAttribute="bottom" constant="20" id="77f-7F-B61"/>
                             <constraint firstItem="9JO-eT-kog" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="80" id="9jD-fb-xfD"/>
+                            <constraint firstItem="Tbi-Ir-tHi" firstAttribute="top" secondItem="9JO-eT-kog" secondAttribute="bottom" constant="8" id="Q8A-di-gIg"/>
                             <constraint firstItem="vIY-zf-O7Y" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="20" id="Qgq-UM-Vcm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="vIY-zf-O7Y" secondAttribute="trailing" constant="20" id="XVY-yv-eZ7"/>
                             <constraint firstItem="9JO-eT-kog" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="cuN-Y7-LqX"/>
                             <constraint firstItem="kJo-5W-p1a" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="iHu-kN-res"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="kJo-5W-p1a" secondAttribute="bottom" constant="20" id="oxW-8a-JBg"/>
+                            <constraint firstItem="Tbi-Ir-tHi" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="qGm-Mn-6R0"/>
                         </constraints>
                     </view>
                 </viewController>
